[gd_scene load_steps=6 format=4 uid="uid://ba0csbqnsm5t3"]

[ext_resource type="Script" uid="uid://bswgwslkg7m7l" path="res://Scenes/GamePlayScenes/Level/level.gd" id="1_x1ple"]
[ext_resource type="Texture2D" uid="uid://kgq0625cn2j7" path="res://Entity/Plains/LayersMap/TileLayer/Assets/GrassTile.png" id="2_n7jii"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pam04"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rgofp"]
resource_name = "GrassTile"
texture = ExtResource("2_n7jii")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_cf066"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_rgofp")

[node name="Level" type="Node2D"]
script = ExtResource("1_x1ple")

[node name="Background" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -76.0
offset_right = 1521.0
offset_bottom = 1062.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pam04")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 128

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -210.0
offset_bottom = 646.0
grow_horizontal = 0

[node name="menuButton" type="Button" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_top = 16.0
offset_right = -12.0
offset_bottom = 53.0
grow_horizontal = 0
text = "buttonMenu"

[node name="FPSCounter" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 16.0
offset_top = 615.0
offset_right = 56.0
offset_bottom = 638.0
text = "111"

[node name="Map0" type="TileMapLayer" parent="."]
visible = false
use_parent_material = true
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAABAAAAAAAAAAAAAAABAAEAAAAAAAAAAAABAAIAAAAAAAAAAAACAAAAAAAAAAAAAAACAAEAAAAAAAAAAAACAAIAAAAAAAAAAAAEAAQAAAAAAAAAAAAIAPr/AAAAAAAAAAAIAPv/AAAAAAAAAAAHAPz/AAAAAAAAAAAHAP3/AAAAAAAAAAAHAP7/AAAAAAAAAAAHAP//AAAAAAAAAAAIAAAAAAAAAAAAAAAJAAAAAAAAAAAAAAAKAP//AAAAAAAAAAALAP//AAAAAAAAAAAMAP//AAAAAAAAAAANAP7/AAAAAAAAAAANAP3/AAAAAAAAAAAOAP3/AAAAAAAAAAAOAPz/AAAAAAAAAAANAPz/AAAAAAAAAAAMAPz/AAAAAAAAAAALAPv/AAAAAAAAAAAKAPz/AAAAAAAAAAAJAPz/AAAAAAAAAAAJAP3/AAAAAAAAAAAJAP7/AAAAAAAAAAAKAP7/AAAAAAAAAAALAP7/AAAAAAAAAAALAP3/AAAAAAAAAAAMAP3/AAAAAAAAAAAMAPv/AAAAAAAAAAAMAPr/AAAAAAAAAAAMAPn/AAAAAAAAAAALAPn/AAAAAAAAAAALAPr/AAAAAAAAAAAKAPr/AAAAAAAAAAAKAPv/AAAAAAAAAAAJAP//AAAAAAAAAAAIAAEAAAAAAAAAAAAIAAIAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAEAAAAAAAAAAAAKAAEAAAAAAAAAAAALAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAANAP//AAAAAAAAAAALAPz/AAAAAAAAAAAIAPz/AAAAAAAAAAAKAAIAAAAAAAAAAAALAAIAAAAAAAAAAAAMAAMAAAAAAAAAAAANAAMAAAAAAAAAAAAOAAMAAAAAAAAAAAAPAAIAAAAAAAAAAAAPAAEAAAAAAAAAAAAOAAEAAAAAAAAAAAAOAAAAAAAAAAAAAAAIAP7/AAAAAAAAAAAGAP//AAAAAAAAAAADAPj/AAAAAAAAAAADAPn/AAAAAAAAAAAEAPn/AAAAAAAAAAAEAPr/AAAAAAAAAAAFAPv/AAAAAAAAAAAFAPz/AAAAAAAAAAAGAP3/AAAAAAAAAAAHAAAAAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAQAAAAAAAAAAAAHAAUAAAAAAAAAAAAHAAYAAAAAAAAAAAAGAAUAAAAAAAAAAAAGAAQAAAAAAAAAAAAFAAQAAAAAAAAAAAAEAAMAAAAAAAAAAAAEAAIAAAAAAAAAAAADAAEAAAAAAAAAAAACAP//AAAAAAAAAAABAP7/AAAAAAAAAAAAAP3/AAAAAAAAAAD///3/AAAAAAAAAAD///z/AAAAAAAAAAD///v/AAAAAAAAAAAAAPv/AAAAAAAAAAABAPv/AAAAAAAAAAACAPv/AAAAAAAAAAADAPv/AAAAAAAAAAAEAPv/AAAAAAAAAAAGAPz/AAAAAAAAAAAGAAMAAAAAAAAAAAAFAAMAAAAAAAAAAAADAAQAAAAAAAAAAAAIAAUAAAAAAAAAAAAJAAUAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_cf066")

[node name="MainCamera" type="Camera2D" parent="."]
position = Vector2(139, 78)
zoom = Vector2(2, 2)

[node name="ExtraCamera" type="Camera2D" parent="."]
enabled = false
zoom = Vector2(16, 9)

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
visible = false
blend_mode = 1

[node name="PerantForGroupNodes" type="Node" parent="."]

[node name="Rivers" type="Node" parent="PerantForGroupNodes"]

[node name="Portals" type="Node" parent="PerantForGroupNodes"]

[node name="Bombs" type="Node" parent="PerantForGroupNodes"]

[node name="Walls" type="Node" parent="PerantForGroupNodes"]

[node name="Chests" type="Node" parent="PerantForGroupNodes"]

[node name="Player" type="Node" parent="PerantForGroupNodes"]

[node name="EntetyMassegeParent" type="CanvasLayer" parent="PerantForGroupNodes"]
follow_viewport_enabled = true

[node name="LayersMap" type="Node" parent="PerantForGroupNodes"]

[connection signal="pressed" from="CanvasLayer/Panel/menuButton" to="." method="_on_menu_button_pressed"]
